# inference-sentinel

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  deploy-docker.sh  docker-compose-allContainer.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  benchmarking.sh  harness.py  report.py
benchmarks/datasets/: __init__.py  generator.py  privacy_prompts.json
benchmarks/experiments/: __init__.py  classification.py  controller.py  cost.py  routing.py  session.py
config/: privacy_taxonomy.yaml  routing.yaml  settings.yaml
docs/: ARCHTECTURE.mermaid  DESIGN_SPEC.md
observability/grafana/dashboards/: controller.json  overview.json
observability/loki/: loki-config.yml
observability/prometheus/: prometheus.yml
observability/tempo/: tempo-config.yml
ops/k8s/: README.md  configmap.yaml  deploy.sh  grafana-dashboards-configmap.yaml  grafana.yaml  ingress.yaml  kustomization.yaml  loki.yaml  namespace.yaml  prometheus.yaml  pvcs.yaml  secrets.yaml  sentinel.yaml  tempo.yaml
scripts/: load_test_sessions.py  test_observability.sh  test_shadow_mode.sh  test_system.sh  tests_simple.sh
src/sentinel/: __init__.py  main.py
src/sentinel/api/: __init__.py  routes.py  schemas.py
src/sentinel/backends/: __init__.py  anthropic.py  base.py  google.py  manager.py  ollama.py
src/sentinel/classification/: __init__.py  hybrid_classifier.py  ner_classifier.py  regex_classifier.py  schemas.py  taxonomy.py
src/sentinel/config/: __init__.py  settings.py
src/sentinel/controller/: __init__.py  controller.py  metrics_reader.py  recommendations.py  rules.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_prompts.json
tests/integration/: test_api.py  test_session_stickiness.py
tests/unit/: test_classifier.py  test_cloud_selection.py  test_controller.py  test_hybrid_classifier.py  test_ner_classifier.py  test_router.py  test_schemas.py  test_session.py  test_settings.py  test_shadow.py
(+15 files in other folders)
